--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,11 @@
 #indexPage {
   .banner {
-    position: relative;
-    margin-top: 38px;
-    &__doodle {
-      position: absolute;
-      bottom: -80px;
-      left: 0px;
-      z-index: -1;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    margin-top: 60px;
+    @media all and (min-width: 520px) {
+      margin-top: 0px;
     }
     &__content {
       h2 {
