--- a/css/component.css
+++ b/css/component.css
@@ -4,6 +4,7 @@ header {
   left: 0px;
   height: 100%;
   z-index: 10;
+  /* Setting the stroke to green using rgb values (0, 128, 0) */
 }
 header .navbar {
   width: 100%;
@@ -42,6 +43,9 @@ header .navbar-light .navbar-nav {
     gap: 40px;
   }
 }
+header .navbar-light .navbar-nav .nav-item {
+  text-align: center;
+}
 header .navbar-light .navbar-nav .nav-link.active {
   color: var(--primary-400) !important;
 }
@@ -58,9 +62,18 @@ header .navbar-light .navbar-nav .nav-link {
 header .navbar-light .navbar-nav .nav-link:hover, header .navbar-light .navbar-nav .nav-link:focus {
   color: var(--primary-400) !important;
 }
+header .custom-toggler.navbar-toggler {
+  border-color: transparent;
+}
+header .navbar-toggler:focus {
+  box-shadow: none;
+}
+header .custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
 
 @media (min-width: 992px) {
-  header .navbar-expand-lg .navbar-nav .nav-link {
+  header .navbar-expand-lg .navbar-nav .nav-item .nav-link {
     padding: 0px;
   }
 }
@@ -145,16 +158,19 @@ header .navbar-light .navbar-nav .nav-link:hover, header .navbar-light .navbar-n
 }
 .footer__subscribe button {
   border-radius: 4px;
-  background: var(--Primary-600, #5f69c8);
   padding: 12px 40px;
-  border: var(--Primary-600, #5f69c8);
   color: #fff;
 }
 .footer__hr {
   width: 100%;
   height: 1px;
-  margin-top: 64px;
+  margin-top: 0px;
   background: var(--grey-700, #2d3748);
+}
+@media all and (min-width: 780px) {
+  .footer__hr {
+    margin-top: 64px;
+  }
 }
 .footer__items {
   display: flex;
