--- a/css/component.scss
+++ b/css/component.scss
@@ -42,6 +42,10 @@ header {
         gap: 40px;
       }
 
+      .nav-item {
+        text-align: center;
+      }
+
       .nav-link.active {
         color: var(--primary-400) !important;
       }
@@ -63,13 +67,26 @@ header {
       }
     }
   }
+  .custom-toggler.navbar-toggler {
+    border-color: transparent;
+  }
+  /* Setting the stroke to green using rgb values (0, 128, 0) */
+  .navbar-toggler:focus {
+    box-shadow: none;
+  }
+
+  .custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
 }
 @media (min-width: 992px) {
   header {
     .navbar-expand-lg {
       .navbar-nav {
-        .nav-link {
-          padding: 0px;
+        .nav-item {
+          .nav-link {
+            padding: 0px;
+          }
         }
       }
     }
@@ -158,17 +175,18 @@ header {
     }
     button {
       border-radius: 4px;
-      background: var(--Primary-600, #5f69c8);
       padding: 12px 40px;
-      border: var(--Primary-600, #5f69c8);
       color: #fff;
     }
   }
   &__hr {
     width: 100%;
     height: 1px;
-    margin-top: 64px;
+    margin-top: 0px;
     background: var(--grey-700, #2d3748);
+    @media all and (min-width: 780px) {
+      margin-top: 64px;
+    }
   }
   &__items {
     display: flex;
