--- a/css/component.css
+++ b/css/component.css
@@ -160,6 +160,12 @@ header .custom-toggler .navbar-toggler-icon {
   border-radius: 4px;
   padding: 12px 40px;
   color: #fff;
+  margin-top: 20px;
+}
+@media all and (min-width: 768px) {
+  .footer__subscribe button {
+    margin-top: 0px;
+  }
 }
 .footer__hr {
   width: 100%;
