--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,9 @@
   line-height: 20px;
 }
 
+#servicePage .content__title {
+  font-weight: 500;
+}
 #servicePage .accordion-button::after {
   flex-shrink: 0;
   width: 1.25rem;
