--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
     &__content {
       margin-top: 70px;
       @media all and (min-width: 768px) {
-        margin-top: 0px;
+        margin-top: 60px;
       }
       h2 {
         font-style: normal;
@@ -26,7 +26,95 @@
       }
     }
   }
+  .mobile-screen {
+    width: 300px;
+    height: 600px;
+    border: 10px solid #333;
+    border-radius: 36px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+  }
 
+  .slider {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+  }
+
+  .slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .slide {
+    min-width: 100%;
+    box-sizing: border-box;
+  }
+
+  .slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .banner__right {
+    border-radius: 12px;
+    background: #272c3d;
+    backdrop-filter: blur(7.75px);
+    padding: 12px 20px;
+    position: absolute;
+  }
+  .bannerRight {
+    &__image {
+      position: relative;
+      display: flex;
+      justify-content: center;
+    }
+
+    &__client {
+      top: 40px;
+      left: -30px;
+      @media all and (min-width: 992px) {
+        top: 100px;
+        left: 70px;
+      }
+      @media (min-width: 576px) and (max-width: 767px) {
+        left: 50px;
+        top: 100px;
+      }
+      @media all and (max-width: 576px) {
+        left: -5px;
+      }
+    }
+    &__brand {
+      right: -30px;
+      top: 50%;
+      transform: translateY(-50%);
+      @media all and (min-width: 992px) {
+        right: 50px;
+      }
+      @media (min-width: 576px) and (max-width: 767px) {
+        right: 30px;
+      }
+    }
+    &__rating {
+      bottom: 40px;
+      left: -30px;
+      @media all and (min-width: 992px) {
+        left: 70px;
+        bottom: 100px;
+      }
+      @media (min-width: 576px) and (max-width: 767px) {
+        left: 50px;
+        bottom: 100px;
+      }
+      @media all and (max-width: 576px) {
+        left: -5px;
+      }
+    }
+  }
   .brand {
     &__wrapper {
       border-radius: 32px;
